fixed bug with horizontal scrollbar.. again..(

--- a/css/header.css
+++ b/css/header.css
@@ -30,6 +30,7 @@ button {
 
 html,
 body {
+    width: 100%;
     margin: 0;
     padding: 0;
 }
@@ -81,7 +82,7 @@ body {
         background-image: url(../images/banner-bg.jpg);
         margin-bottom: 50px;
         padding-top: 26px;
-        height: 450px;
+        padding-bottom: 20vh;
     }
     .header-container {
         max-width: 1200px;
@@ -123,9 +124,8 @@ body {
 
 @media screen and (min-width:641px) and (max-width:1199px) {
     .header {
-        width: 100%;
-        height: 500px;
         background-image: url(../images/banner-bg-tablet.jpg);
+        padding-bottom: 50vh;
     }
     .first-line {
         justify-content: left;
@@ -148,8 +148,8 @@ body {
 
 @media screen and (max-width:640px) {
     .header {
-        height: 100vh;
         background-image: url(../images/banner-mobile.jpg);
+        padding-bottom: 40vw;
     }
     .first-line {
         justify-content: center;
