--- a/css/search.css
+++ b/css/search.css
@@ -18,7 +18,7 @@
 }
 
 .search-field-label {
-    width: 80%
+    width: 90%
 }
 
 .search-button-label {
